# reaction-diffusion

./: Cargo.toml  README.md
src/: capture.rs  compute.rs  main.rs  particles.rs  render.rs  uniforms.rs  util.rs
src/shaders/: init.frag  shader.frag  update.comp  update.frag
