[package]
name = "cyclic-diffusion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3", features = ["executor", "thread-pool"] }
glsl-layout = "0.4.0"
nannou = "0.15.0"
rand = "0.7.3"
shaderc = "0.6"
